Adding authentication to UI

--- a/src/HR.LeaveManagement.MVC/Views/Shared/_Layout.cshtml
+++ b/src/HR.LeaveManagement.MVC/Views/Shared/_Layout.cshtml
@@ -25,13 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="dropdown-item text-dark" asp-controller="LeaveTypes" asp-action="Index">Leave Types</a>
-                        </li>
-                        
 
 
-                        @* @if (User.Identity.IsAuthenticated)
+                        @if (User.Identity.IsAuthenticated)
                         {
                             if (User.IsInRole("Employee"))
                             {
@@ -44,8 +40,9 @@
                             }
                             if (User.IsInRole("Administrator"))
                             {
+                                
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Manage
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -55,10 +52,10 @@
                                 </li>
                             }
 
-                        } *@
+                        }
 
                     </ul>
-                    @* <partial name="_LoginPartial" /> *@
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
